--- a/src/main/resources/static/registrationPage/reg.css
+++ b/src/main/resources/static/registrationPage/reg.css
@@ -10,8 +10,8 @@ body {
 }
 
 .login_div {
-    width: calc(25vw - 40px);
-    height: 55vh;
+    width: calc(30vw - 40px);
+    height: max-content;
     box-shadow: 0 0 6px black;
     display: flex;
     flex-direction: column;
@@ -26,11 +26,11 @@ h1 {
     font-size: 48px;
 }
 
-.login_form {
+.registration_form {
     width: 100%;
     height: calc(100% - 100px);
     margin: 0;
-    padding: 30px 0 30px 0;
+    padding: 10px 0 30px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -40,6 +40,7 @@ h1 {
     display: flex;
     flex-direction: column;
     font-size: 27px;
+    margin-top: 10px;
 }
 .login_input{
     margin-top: 15px;
@@ -54,6 +55,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
 }
+.text_for_link,
 .reg_link,
 .button_submit{
     padding: 0;
@@ -61,16 +63,20 @@ h1 {
     border: none;
     background: none;
     text-decoration: none;
-    font-size: 26px;
+    font-size: 20px;
     cursor: pointer;
     position: relative;
     color: black;
+}
+.reg_link,
+.button_submit{
+    color: #4f4fff;
 }
 .reg_link::after,
 .button_submit::after{
     width: 0;
     height: 2px;
-    background-color: black;
+    background-color:#4f4fff;
     display: block;
     position: absolute;
     left: 0;
@@ -82,7 +88,7 @@ h1 {
     transition: width 0.5s;
     width: 100%;
 }
-.exception,
+.text_for_link,
 .reg_link,
 .button_submit,
 .login_label,
@@ -92,8 +98,8 @@ h1{
     font-family: 'Lexend Deca', sans-serif;
 }
 .exception{
-    font-size: 22px;
     color: red;
-    margin: 0;
-
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 15px;
+    margin: 5px;
 }
