--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -12,11 +12,12 @@
 <div class="login_div">
     <h1>Log in</h1>
     <form th:method="post" th:action="@{/processUser}" class="login_form">
+        <p th:if="${error}!=null" th:text="${error}" th:attr="class='exception'"></p>
         <label class="login_label">
             Username<input type="text" placeholder="Enter your username" name="username" class="login_input">
         </label>
         <label class="login_label">
-            Password<input type="text" placeholder="Enter your password" name="password" class="login_input">
+            Password<input type="password" placeholder="Enter your password" name="password" class="login_input">
         </label>
         <div class="button_div">
             <a th:href="@{/registration}" class="reg_link">Sign up</a>
