--- a/src/main/resources/templates/CurTaskDemoPage.html
+++ b/src/main/resources/templates/CurTaskDemoPage.html
@@ -45,8 +45,10 @@
                     <div>
                         <input type="text" class="menu_element" style="margin: 5px 0 0 0; cursor: text"
                                th:name="|contactDTOSet[__${stat.index}__].email|"
-                               th:field="*{contactDTOSet[__${stat.index}__].email}">
+                               th:field="*{contactDTOSet[__${stat.index}__].email}"
+                               th:readonly="${#strings.equals(contact.getEmail(),personEmail)}">
                         <button style="align-self: end" type="submit" class="add_task_button"
+                                th:if="${not #strings.equals(contact.getEmail(),personEmail)}"
                                 th:formaction="@{'/tasks/deleteContact/{ind}'(ind=${stat.index})}">Delete
                         </button>
                     </div>
